removed magic from prokect

--- a/landing/index.html
+++ b/landing/index.html
@@ -376,7 +376,7 @@
 
             <h2 class="famhack-section-heading">Join the Waitlist</h2>
             <p class="famhack-section-text">
-              Enter your email and we'll send you a magic sign-in link. One click and you're in.
+              Enter your email and we'll send you a sign-in link. One click and you're in.
             </p>
 
             <!-- Live counter -->
@@ -390,7 +390,7 @@
               <input id="waitlistEmailInput" type="email" placeholder="you@example.com" autocomplete="email"
                 spellcheck="false" />
               <button id="waitlistSendBtn" class="accio-send-btn" type="button">
-                Send Magic Link
+                Send Link
               </button>
             </div>
 
