--- a/landing/index.html
+++ b/landing/index.html
@@ -376,7 +376,7 @@
 
             <h2 class="famhack-section-heading">Join the Waitlist</h2>
             <p class="famhack-section-text">
-              Enter your email and we'll send you a sign-in link. One click and you're in.
+              Enter your email and join <strong>Accio</strong> today. No verification, no hassle.
             </p>
 
             <!-- Live counter -->
