removed some text

--- a/landing/index.html
+++ b/landing/index.html
@@ -331,9 +331,14 @@
               </div>
             </div>
             <h2 class="famhack-section-heading">What is Accio?</h2>
-            <p class="famhack-section-text">Accio is an AI lecture companion that monitors learner behavior and
-              detects topic-level confusion in real time. When confusion crosses a threshold, it generates concise,
-              context-aware clarifications using slides and transcript windows tied to the active topic range.</p>
+            <p class="famhack-section-text">Accio is an autonomous learning engine powered by
+              multi-agent orchestration layers. By mapping key content into a 384-dimensional neural space, it uses
+              advanced graphing and clustering to track your comprehension with mathematical precision
+
+              This "agentic" behavior allows the system to tailor its teaching style specifically to you, delivering
+              personalised context and clarifications in real-time without the annoyance of traditional AI with generic
+              advice. Accio
+              doesn't just watch the lecture with you; it understands exactly how to help you master it</p>
             <div class="famhack-about-cta">
               <a data-wf--button--variant="dark" href="#waitlist" class="button-link w-inline-block js-anchor">
                 <div class="button w-variant-5452c88f-b993-2cc4-82dd-46f3e520c036">
